--- a/config.json
+++ b/config.json
@@ -11,8 +11,10 @@
         "voicechannel": "988000498172968970"
     },
     "Guild": {
-        "GuildID": "964229512629997588",
-        "OwnerRole": "988000258749509683"
+        "GuildID": "1015392710489817149",
+        "OwnerRole": "1020961181504114798",
+        "tagrol": "1020961181504114798",
+        "boosterrol": "1020961181504114798"
     },
     "emojis": {
         "tada": "🎉",
